--- a/charts/jiva-w/2.2/templates/jiva-w-deployment.yaml
+++ b/charts/jiva-w/2.2/templates/jiva-w-deployment.yaml
@@ -25,13 +25,12 @@ spec:
     spec:
       containers:
       - args:
-        - sudo chown -R mgeweb:mgeweb /home/mgeweb/sankhyaw-dpm/ /home/mgeweb/SankhyaW/Anexos
+        - sudo chown -R mgeweb:mgeweb /home/mgeweb/.jboss_conf/ /home/mgeweb/sankhyaw-dpm/ /home/mgeweb/SankhyaW/Anexos
           /home/mgeweb/repositorio /home/mgeweb/pacotes-sannfe/ && /home/mgeweb/DPM/scripts/./wildfly.sh
           ; java -jar /home/mgeweb/DPM/docker-package-manager.jar ; /home/mgeweb/DPM/scripts/./sannfe.sh;
           sudo chown -R mgeweb:mgeweb /home/mgeweb/SanNFe /home/mgeweb/wildfly_producao/standalone/log
-          && /home/mgeweb/DPM/scripts/./visualvm.sh && sleep 10  && sed -i 's/<min-pool-size>100</<min-pool-size>10</g' && 
-          /home/mgeweb/wildfly_producao/standalone/deployments/mge-ds.xml && sed -i
-          's/<max-pool-size>100</<max-pool-size>50</g' /home/mgeweb/wildfly_producao/standalone/deployments/mge-ds.xml
+          && /home/mgeweb/DPM/scripts/./visualvm.sh && sleep 10  && sed -i 's/<min-pool-size>100/<min-pool-size>10/g' /home/mgeweb/wildfly_producao/standalone/deployments/mge-ds.xml &&
+          sed -i 's/<max-pool-size>100/<max-pool-size>50/g' /home/mgeweb/wildfly_producao/standalone/deployments/mge-ds.xml
           && sleep 30 ; /home/mgeweb/wildfly_producao/bin/./standalone.sh
           -Djape.lazy.init=true -Djape.lob.fields.as.lazy=true -Djape.ignore.ligacao.inconsistente=true -Dsankhyaw.schedule.disable=true
         command:
