--- a/charts/jiva-w/2.3/questions.yml
+++ b/charts/jiva-w/2.3/questions.yml
@@ -131,6 +131,22 @@ questions:
   required: true
   group: "Configurando Memoria e Cpu da Aplicação"
 
+- variable: volume.jivaw.size
+  label: "Tamanho do volume para o Jiva-W"
+  description: "Tamanho do volume para o Jiva-W"
+  type: string
+  default: ""
+  required: true
+  group: "Configurando Memoria e Cpu da Aplicação"
+
+- variable: volume.sas.size
+  label: "Tamanho do volume para o SAS"
+  description: "Tamanho do volume para o SAS"
+  type: string
+  default: ""
+  required: true
+  group: "Configurando Memoria e Cpu da Aplicação"
+
 # Outras Aplicações
 - variable: sas.chaveCliente
   label: "Chave SAS do cliente?"
