--- a/charts/jiva-w/2.3/templates/volume-esocial.yaml
+++ b/charts/jiva-w/2.3/templates/volume-esocial.yaml
@@ -17,5 +17,5 @@ spec:
   storageClassName: "{{ .Values.imageRepository.storageClass }}"
   resources:
     requests:
-      storage: "{{ .Values.volume.esocial.size }}"
+      storage: {{ .Values.volume.esocial.size }}Gi
 {{- end }}
