--- a/charts/jiva-w/2.3/templates/volume-jiva.yaml
+++ b/charts/jiva-w/2.3/templates/volume-jiva.yaml
@@ -16,4 +16,4 @@ spec:
   storageClassName: "{{ .Values.imageRepository.storageClass }}"
   resources:
     requests:
-      storage: "{{ .Values.volume.jivaw.size }}"
+      storage: {{ .Values.volume.jivaw.size }}Gi
