--- a/charts/jiva-w/2.3/values.yaml
+++ b/charts/jiva-w/2.3/values.yaml
@@ -62,13 +62,13 @@ cpu:
 
 volume:
   jivaw:
-    size: 3Gi
+    size: 3
   sas: 
-    size: 1Gi
+    size: 1
   datasync:
-    size: 1Gi
+    size: 1
   esocial:
-    size: 2Gi
+    size: 2
 
 
 ## Possui SAs
