--- a/charts/jiva-w/2.4/templates/esocial-deployment.yaml
+++ b/charts/jiva-w/2.4/templates/esocial-deployment.yaml
@@ -34,6 +34,8 @@ spec:
         - /bin/sh
         - -c
         env:
+        - name: JAVA_TOOL_OPTIONS
+          value: "{{ .Values.jboss.envs }}"
         - name: APP
           value: esocial
         - name: CLIENTE
