--- a/charts/jiva-w/2.4/templates/jiva-w-deployment.yaml
+++ b/charts/jiva-w/2.4/templates/jiva-w-deployment.yaml
@@ -37,6 +37,8 @@ spec:
         - /bin/sh
         - -c
         env:
+        - name: JAVA_TOOL_OPTIONS
+          value: "{{ .Values.jboss.envs }}"
         - name: HASSANFE
           value: "{{ .Values.sannfe.enabled }}"
         - name: CHAVESAS
