--- a/charts/jiva-w/2.4/templates/jiva-w-deployment.yaml
+++ b/charts/jiva-w/2.4/templates/jiva-w-deployment.yaml
@@ -115,6 +115,7 @@ spec:
         volumeMounts:
         - mountPath: /home/mgeweb/repositorio
           name: volume-jiva
+          subPath: {{ .Release.Namespace }}/repositorio/
         - mountPath: /home/mgeweb/SanNFe
           name: volume-jiva
           subPath: {{ .Release.Namespace }}/SanNFe/
