--- a/charts/jiva-w/2.5/templates/sas-deployment.yaml
+++ b/charts/jiva-w/2.5/templates/sas-deployment.yaml
@@ -84,6 +84,10 @@ spec:
           name: volume-pacotesas
         - mountPath: /opt/SAS/licenca
           name: volume-sas
+      dnsConfig:
+        options:
+        - name: ndots
+          value: "0"
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       securityContext: {}
