--- a/charts/check-mk/1.0/templates/volume-check-mk.yaml
+++ b/charts/check-mk/1.0/templates/volume-check-mk.yaml
@@ -1,7 +1,7 @@
-﻿apiVersion: v1
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: volume-claim
+  name: volume-check-mk
   annotations:
     {{- range $key, $value := .Values.annotations }}
       {{ $key }}: {{ $value }}
@@ -9,11 +9,11 @@ metadata:
   finalizers:
   - kubernetes.io/pvc-protection
   labels:
-    io.kompose.service: volume-claim
+    io.kompose.service: volume-check-mk
 spec:
   accessModes:
-  - ReadWriteMany
+  - ReadWriteOnce
   storageClassName: "{{ .Values.imageRepository.storageClass }}"
   resources:
     requests:
-      storage: 3Gi
+      storage: {{ .Values.volume.checkmk.size }}Gi
