--- a/charts/check-mk/1.0/templates/ingress.yaml
+++ b/charts/check-mk/1.0/templates/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
   name: ingress
 spec:
   rules:
-  - host: check-mk{{ .Values.loadBalancer.dns }}
+  - host: {{ .Values.loadBalancer.dns }}
     http:
       paths:
       - backend:
