--- a/charts/check-mk/1.0/templates/ingress.yaml
+++ b/charts/check-mk/1.0/templates/ingress.yaml
@@ -1,4 +1,4 @@
-{{- if Values.loadBalancer.enabled  }}
+{{- if .Values.loadBalancer.enabled  }}
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
