--- a/charts/check-mk/1.0/templates/check-mk.deployment.yaml
+++ b/charts/check-mk/1.0/templates/check-mk.deployment.yaml
@@ -49,7 +49,7 @@ spec:
       restartPolicy: Always
       terminationGracePeriodSeconds: 0
       volumes:
-        - name: volume-check_mk
+        - name: volume-check-mk
           persistentVolumeClaim:
-            claimName: volume-check_mk
+            claimName: volume-check-mk
 status: {}
