--- a/charts/check-mk/1.0/templates/check-mk.deployment.yaml
+++ b/charts/check-mk/1.0/templates/check-mk.deployment.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: check-mk
-        image: {{ .Values.image }}
+        image: {{ .Values.checkmk.image }}
         imagePullPolicy: IfNotPresent
         livenessProbe:
           failureThreshold: 3
